# hackathon-urfu

./: README.md  index.html  presentation.pptx
bot/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
bot/scripts/: get_minimum_mark.py  parse_programs.py
bot/src/urfu/application/common/: interactor.py  uow.py
bot/src/urfu/application/common/security/: id_provider.py  token_processor.py
bot/src/urfu/application/contracts/exam_scores/: __init__.py  add_exam_scores.py
bot/src/urfu/application/contracts/specializations/: create.py  get_raiting.py  insert_tag.py
bot/src/urfu/application/contracts/specializations_scores/: create.py
bot/src/urfu/application/contracts/users/: create_or_update.py  get.py  (+1 more)
bot/src/urfu/application/errors/: __init__.py
bot/src/urfu/application/gateways/: exam_score.py  specialization.py  specialization_score.py  user.py
bot/src/urfu/domain/dto/: exam_score.py  specialization.py  user.py
bot/src/urfu/domain/entities/: base.py  exam_score.py  specialization.py  specialization_score.py  user.py
bot/src/urfu/domain/enums/: subject.py
bot/src/urfu/domain/errors/: auth.py
bot/src/urfu/domain/value_objects/: common.py  exam_score.py  specialization.py  user.py
bot/src/urfu/infrastructure/: settings.py
bot/src/urfu/infrastructure/database/: uow.py
bot/src/urfu/infrastructure/errors/: security.py
bot/src/urfu/infrastructure/ioc/: __init__.py
bot/src/urfu/infrastructure/security/: id_provider.py  init_data_processor.py
bot/src/urfu/presentation/bot/: __main__.py
bot/src/urfu/presentation/web/: __init__.py
(+69 files in other folders)
